--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html> <html lang="de"> <head> <meta charset="utf-8" /> <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <meta name="theme-color" content="#000000" /> <meta name="description" content="Music Quiz mit Spotify API" /> <title>Music Quiz</title> </head> <body> <noscript>Du musst JavaScript aktivieren, um diese App zu nutzen.</noscript> <div id="root"></div> </body> </html> ```
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Music Quiz mit Spotify API" />
+    <title>Music Quiz</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+    <noscript>Du musst JavaScript aktivieren, um diese App zu nutzen.</noscript>
+    <div id="root"></div>
+</body>
+</html>
